deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: eryzakaria14/user-service:${DOCKER_IMAGE}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: release
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      name: user-service
  selector:
    app: user-service
